corrigindo dockerfile